# ChangeLog for gnome-extra/gnome-games
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-games/ChangeLog,v 1.299 2010/10/17 15:45:35 armin76 Exp $

  17 Oct 2010; Raúl Porcel <armin76@gentoo.org>
  gnome-games-2.30.2-r1.ebuild:
  alpha/ia64/sh/sparc stable wrt #324077

  09 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  gnome-games-2.30.2-r1.ebuild:
  ppc64 stable wrt #324077

  11 Sep 2010; Joseph Jezak <josejx@gentoo.org>
  gnome-games-2.30.2-r1.ebuild:
  Marked ppc for bug #324077.

  18 Aug 2010; Markus Meier <maekke@gentoo.org> gnome-games-2.28.2.ebuild:
  arm stable, bug #314899

  14 Aug 2010; Raúl Porcel <armin76@gentoo.org> gnome-games-2.28.2.ebuild:
  alpha/ia64/sh/sparc stable wrt #314899

  03 Aug 2010; Nirbheek Chauhan <nirbheek@gentoo.org>
  gnome-games-2.30.2-r1.ebuild:
  Drop stable keywords from 2.30, it has major regressions (half the games
  won't be installed), and should have never gone stable

  01 Aug 2010; Christian Faulhammer <fauli@gentoo.org>
  gnome-games-2.30.2-r1.ebuild:
  x86 stable, bug 324077

  31 Jul 2010; Pacho Ramos <pacho@gentoo.org> gnome-games-2.30.2-r1.ebuild:
  amd64 stable, bug 324077

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> gnome-games-2.26.3-r1.ebuild,
  gnome-games-2.28.2.ebuild, gnome-games-2.30.2.ebuild,
  gnome-games-2.30.2-r1.ebuild:
  Drop HPPA keywording (bug #324511).

  11 Jul 2010; Pacho Ramos <pacho@gentoo.org>
  -files/gnome-games-2.14.0-no_lazy_bindings.patch,
  -gnome-games-2.24.3.ebuild:
  Drop old.

  29 Jun 2010; Nirbheek Chauhan <nirbheek@gentoo.org>
  +gnome-games-2.30.2-r1.ebuild, metadata.xml:
  Add new revision that builds clutter games and uses introspection.
  USE=clutter is package.use.masked till introspection and dev-libs/seed can
  be unmasked

*gnome-games-2.30.2-r1 (29 Jun 2010)

  29 Jun 2010; Nirbheek Chauhan <nirbheek@gentoo.org>
  +gnome-games-2.30.2-r1.ebuild: