@@ -7,7 +7,7 @@ DIST gnome-games-2.28.2.tar.bz2 25498433 RMD160 03c9ca6e899bcc44436b232b126f22a0
 DIST gnome-games-2.30.2.tar.bz2 27683256 RMD160 12c7e5ba3b4a9aca5d9918978e437e774ac0752b SHA1 3541ccc991af82603fc3067863bc27a731302b2c SHA256 57c3f3685cdd49016dfbf236f4a1d98c9d669d456fabe0aeb6f5a4128dba3586
 EBUILD gnome-games-2.26.3-r1.ebuild 4653 RMD160 2f7c65b912ae211c95ab28ed951e2a287a7c6be9 SHA1 33eb225cd2ac96ae013c398eccc98f20deb58a65 SHA256 e8322aecd563965624581eaffb0d32bfa2c3338972df4f85f4584ac288868290
 EBUILD gnome-games-2.28.2.ebuild 4909 RMD160 9a2c736e7c825e468fabcec598ab74da1d58131c SHA1 c3decc918ef3624cca66ec405fd529babb7b6e4d SHA256 b7101ca1ef190374ef6a153a00acc5644de88a199166cec3a622dc2bc695a7c9
-EBUILD gnome-games-2.30.2-r1.ebuild 4513 RMD160 53b40d7bf78e4aa95189219903fd5a22e0b41f5e SHA1 e6bfb17e9eeda463bcdf24f71ba76e67376d2769 SHA256 8b568839d3970e139740422a4d7e9eeab9a0e3f901a12749fd8b46563564106b
+EBUILD gnome-games-2.30.2-r1.ebuild 4516 RMD160 24548f8dfece4f2bb9892c4bc29d33962cd54f29 SHA1 af2e4c3bbedd488657687ebeed048b881dccacd8 SHA256 9c58d197a3285e7ce4aedd1dfe2606de2bbc2b5749d2c47ce626964157f9fa9a
 EBUILD gnome-games-2.30.2.ebuild 4133 RMD160 4c1606ae0a7a9145421c8c166e51581ea2907bd6 SHA1 7eefd71eac520cfdc4395cbe5e166d29d6633fbc SHA256 b30125ebad685fc8ec20a9f4cbdde990d04689cff42ffebd693256868a5bbd3f
-MISC ChangeLog 40503 RMD160 baf033a8b944b6c5fca82944ac0ac7e2783892be SHA1 32f0635a6f5b8c4f1ed1ac1ff95edee79067c191 SHA256 f47d8c4254a4e018490fcec705d9572b6de56d12da768707fa454ba25dadb208
+MISC ChangeLog 40622 RMD160 7ff5bd92bd7f41e674ebb00f80c4ebe90a708d56 SHA1 845ee8c3c4892a7943ea3a0738fcc690801864a1 SHA256 c95e083186383156734eed5de30dd1577aa7f5790895ea16bbd18729fc15aff3
 MISC metadata.xml 469 RMD160 661b9e63299816bfb3f94164ea1c381d89af5081 SHA1 2c6eff1070b37f41776458bad6d5e304ce1b5b51 SHA256 81ec935c3dcf9ddb7ec07386657fb30d9e28b69d2011f318bd4b0f38645b9d79
