@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/gnome-games
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-games/ChangeLog,v 1.299 2010/10/17 15:45:35 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-games/ChangeLog,v 1.300 2010/12/24 13:34:16 nirbheek Exp $
+
+  24 Dec 2010; <nirbheek@gentoo.org> gnome-games-2.30.2-r1.ebuild:
+  slotmove =media-libs/clutter-gtk-0.10* 1.0 0.10
 
   17 Oct 2010; Raúl Porcel <armin76@gentoo.org>
   gnome-games-2.30.2-r1.ebuild:
